Android: add API level check for hasVerticalAccuracy()

Location.hasVerticalAccuracy() and Location.getVerticalAccuracyMeters()
methods are available since API Level 26.
We tried to call these methods without the API Level check, which was
leading to runtime exceptions on Java side.
This patch fixes it.

Fixes: QTBUG-99329
Change-Id: Ib43aec8a3891ab7200d28f6665bd7db60c13495e
Reviewed-by: Juha Vuolle <juha.vuolle@insta.fi>
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>
(cherry picked from commit c452e9b906e20a6ef1594db0a4543f05b7aed1c2)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>